@@ -1,6 +1,5 @@
 package rw.transport.vubaride.security;
 
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
@@ -10,39 +9,39 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
     private static final long MAX_AGE = 3600L;
-    private static final int CORS_FILTER_ORDER = -102;
 
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         
-        // Allow credentials
+        // Allow credentials (session cookies, etc.)
         config.setAllowCredentials(true);
         
         // Allow multiple origins
-        config.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://127.0.0.1:5500"
+        config.setAllowedOrigins(List.of(
+            "http://localhost:5173",  // Frontend server (React, Vue, etc.)
+            "http://127.0.0.1:5501"   // Local development server
         ));
         
-        // Allow all headers that might be used
-        config.setAllowedHeaders(Arrays.asList(
-            HttpHeaders.AUTHORIZATION,
-            HttpHeaders.CONTENT_TYPE,
-            HttpHeaders.ACCEPT,
-            HttpHeaders.ORIGIN,
-            HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD,
-            HttpHeaders.ACCESS_CONTROL_REQUEST_HEADERS,
-            "X-Requested-With"
+        // Allow all headers that might be used in requests
+        config.setAllowedHeaders(List.of(
+            HttpHeaders.AUTHORIZATION, // JWT Token in Authorization header
+            HttpHeaders.CONTENT_TYPE,  // Content-Type for POST/PUT requests
+            HttpHeaders.ACCEPT,        // Accept header for responses
+            HttpHeaders.ORIGIN,        // Origin header for requests
+            HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD, // Preflight method type
+            HttpHeaders.ACCESS_CONTROL_REQUEST_HEADERS, // Preflight request headers
+            "X-Requested-With"         // Used in AJAX requests
         ));
         
-        // Allow all necessary HTTP methods
-        config.setAllowedMethods(Arrays.asList(
+        // Allow common HTTP methods
+        config.setAllowedMethods(List.of(
             HttpMethod.GET.name(),
             HttpMethod.POST.name(),
             HttpMethod.PUT.name(),
@@ -51,16 +50,16 @@ public class CorsConfig {
             HttpMethod.PATCH.name()
         ));
         
-        // Expose headers that might be needed by the client
-        config.setExposedHeaders(Arrays.asList(
-            HttpHeaders.AUTHORIZATION,
-            HttpHeaders.CONTENT_DISPOSITION
+        // Expose specific headers to the client (for custom headers or tokens)
+        config.setExposedHeaders(List.of(
+            HttpHeaders.AUTHORIZATION,  // Expose JWT token
+            HttpHeaders.CONTENT_DISPOSITION // For file downloads
         ));
         
-        // Set max age for preflight requests cache
+        // Cache the preflight response for 1 hour
         config.setMaxAge(MAX_AGE);
         
-        // Register the configuration for all paths
+        // Apply the configuration to all routes
         source.registerCorsConfiguration("/**", config);
         
         return new CorsFilter(source);
